<resources>
    <string name="app_name">Kotlin Notes</string>
    <string name="note_title_hint">Заголовок</string>
    <string name="note_content_hint">Текст заметки</string>
    <string name="new_note_title">Новая заметка</string>
    <string name="notes_fragment_title">Мои заметки</string>
    <string name="logout_menu_title">Выйти из аккаунта</string>
    <string name="dialog_logout_title">Выйти из аккаунта?</string>
    <string name="dialog_logout_description">Все ваши заметки будут сохранены. Вы сможете получить к ним доступ после авторизации.</string>
    <string name="dialog_logout_confirm">Да, я хочу выйти</string>
    <string name="dialog_logout_cancel">Отмена</string>
    <string name="dialog_delete_question">Вы действительно хотите удалить заметку?</string>
    <string name="dialog_delete_confirm">Да, я хочу её удалить</string>
    <string name="delete_note_success">Заметка успешно удалена</string>
    <string name="progressbar_description">Пожалуйста, подождите…</string>
</resources>
