<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <LinearLayout
        android:id="@+id/dialog_delete_payment_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/dialog_logout_title"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/dialog_logout_description"
            android:textSize="14sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_touch_target"
        android:layout_below="@id/dialog_delete_payment_top"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_logout_confirm"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_touch_target"
        android:layout_below="@id/logout_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_logout_cancel"
            android:textSize="14sp" />
    </FrameLayout>
</RelativeLayout>