<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <TextView
        android:id="@+id/dialog_delete_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/dialog_delete_question"
        android:textSize="16sp" />

    <FrameLayout
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_touch_target"
        android:layout_below="@id/dialog_delete_title"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_delete_confirm"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_touch_target"
        android:layout_below="@id/logout_button"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="4dp"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_logout_cancel"
            android:textSize="14sp" />
    </FrameLayout>
</RelativeLayout>